<resources>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">DyzrVn1S5jZEZ3YRj3fqMKSsdx0gAxrf0uiLwU5i</string>
    <string name="back4app_client_key">NFF69uhSaEiPe5ezJ4Z5TONRghDQXgrVpftxvrUl</string>

    <string name="app_name">TripApp</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="singIn">Sign Up</string>
    <string name="singUp">Register</string>
    <string name="email">Email</string>
    <string name="create_acount">Create Acount</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="title_activity_main_content">MainContent</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name_trip">Name Trip</string>
    <string name="create_trip">Create Trip</string>
    <string name="title_activity_main_part">MainPart</string>
    <string name="title_activity_main_app">mainApp</string>
    <string name="title_activity_current_trip">CurrentTrip</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_onboarding_page">OnboardingPage</string>
    <string name="title_activity_test">test</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_maps2">Map</string>


</resources>
